[package]
name = "rhtop"
version = "0.0.1"
authors = ["Alex Mitchell <alex@alexthemitchell.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "0.9.1"
crossterm = "0.10.1"
bytesize = "1.0.0"

[dependencies.tui]
version = "0.6.2"
default-features = false
features = ['crossterm']